Fixed issues - Horizontal artwork scroller bad spacing if few pieces

--- a/src/assets/styles/flashflex/pages/_common.scss
+++ b/src/assets/styles/flashflex/pages/_common.scss
@@ -101,6 +101,11 @@
 }
 
 @include for-desktop-up {
+	&.has-sidebar {
+		#content {
+			width: 77%;
+		}
+	}
 }
 
 }// .page
